Handle situations without base url and no file access gracefully